# kind-giving-app

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: django-tests.yml
backend/: Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt  schema.yml
backend/app/: settings.py  urls.py
backend/authentication/: models.py  serializers.py  urls.py  views.py
backend/campaign/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/campaign/selectors/: __init__.py  (+2 more)
backend/core/: exceptions.py  models.py  pagination.py  permissions.py  services.py  types.py  utils.py
backend/donation/: admin.py  filters.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
backend/payment/: StripeWebhookView.py  admin.py  filters.py  models.py  selectors.py  serializers.py  urls.py  views.py
backend/project/: admin.py  filters.py  mixins.py  models.py  permissions.py  selectors.py  serializers.py  tests.py  urls.py  views.py
backend/sample_data/: bankaccounts.json  campaigns.json  donations.json  groups.json  groups_users_and_usergroups.json  project.json  users_and_usergroups.json
backend/user/: admin.py  filters.py  managers.py  models.py  services.py
docs/: c4-model.dsl
frontend/: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routes.tsx  theme.d.ts
nginx/: default.conf
(+131 files in other folders)
