[project]
name = "Kind Giving API"
version = "0.1.0"
requires-python = ">=3.9,<4.0"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]

[tool.black]
line-length = 79
target-version = ["py39"]  # Use double quotes here
exclude = '''
/(
    .git
  | __pycache__
  | env
  | venv
  | build
  | dist
  | migrations  # This will exclude any 'migrations' directory
)/
'''

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "env",
    "venv",
    "migrations",
    "build",
    "dist"]
